--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,12 +1,5 @@
-@import './base.css';
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
-  font-weight: normal;
-}
+@import 'base.css';
+@import 'reset.scss';
 
 a,
 .green {
