--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,28 +1,81 @@
-@import 'base.css';
+@charset "utf-8";
+
 @import 'reset.scss';
+@import 'base.css';
+@import './mixins/common.scss';
+@import './mixins/hairline.scss';
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+
+// 单行文本省略
+.text-ellipsis {
+  @include ellipsis();
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+// 2行文本省略
+.text-multi-ellipsis-l2 {
+  @include multi-ellipsis(2);
+}
+
+// 3行文本省略
+.text-multi-ellipsis-l3 {
+  @include multi-ellipsis(3);
+}
+
+.safe-area-top {
+  padding-top: constant(safe-area-inset-top);
+  padding-top: env(safe-area-inset-top);
+}
+
+.safe-area-bottom {
+  padding-bottom: constant(safe-area-inset-bottom);
+  padding-bottom: env(safe-area-inset-bottom);
+}
+
+// 1px
+// 所有包含 'common-hairline' 字符串的class
+// 这里使用的是默认的颜色，是通用样式
+// 个性化的颜色可以使用 hairline.scss中的mixin去定制
+[class*='common-hairline'] {
+  &::after {
+    @include hairline();
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
+.common-hairline {
+  &,
+  &--top,
+  &--left,
+  &--right,
+  &--bottom,
+  &--surround,
+  &--top-bottom {
+    position: relative;
   }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+  &--top::after {
+    border-top-width: var(--common-border-width);
+  }
+
+  &--left::after {
+    border-left-width: var(--common-border-width);
+  }
+
+  &--right::after {
+    border-right-width: var(--common-border-width);
+  }
+
+  &--bottom::after {
+    border-bottom-width: var(--common-border-width);
+  }
+
+  &,
+  &-unset {
+    &--top-bottom::after {
+      border-width: var(--common-border-width) 0;
+    }
+  }
+
+  &--surround::after {
+    border-width: var(--common-border-width);
   }
 }
