--- a/src/styles/mixins/hairline.scss
+++ b/src/styles/mixins/hairline.scss
@@ -4,11 +4,11 @@
 @mixin hairline-common() {
   position: absolute;
   box-sizing: border-box;
-  content: ' ';
+  content: " ";
   pointer-events: none;
 }
 
-@mixin hairline($color:var(--color-border)) {
+@mixin hairline($color: var(--color-border)) {
   @include hairline-common();
 
   top: -50%;
@@ -19,7 +19,7 @@
   transform: scale(0.5);
 }
 
-@mixin hairline-top($color:var(--color-border),$left:0,$right:0) {
+@mixin hairline-top($color: var(--color-border), $left: 0, $right: 0) {
   @include hairline-common();
 
   top: 0;
@@ -29,7 +29,7 @@
   transform: scaleY(0.5);
 }
 
-@mixin hairline-bottom($color:var(--color-border),$left:0,$right:0) {
+@mixin hairline-bottom($color: var(--color-border), $left: 0, $right: 0) {
   @include hairline-common();
 
   right: $right;
@@ -38,6 +38,3 @@
   border-top: 1px solid $color;
   transform: scaleY(0.5);
 }
-
-
-
