refactor: 优化公共样式

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,3 +6,5 @@ $color-placeholder: #cccccc;
 $font-color-main: #333333;
 $font-color-common: #666666;
 $font-color-minor: #999999;
+
+$common-border-width: 1px;
