--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,4 +7,5 @@ $font-color-main: #333333;
 $font-color-common: #666666;
 $font-color-minor: #999999;
 
+$border-color: #3a3a3c;
 $common-border-width: 1px;
